--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,7 +130,7 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.2.3"
     implementation "androidx.fragment:fragment-ktx:1.3.3"
     implementation 'com.afollestad.assent:core:3.0.0-RC4'
-    implementation 'com.github.baoyachi:StepView:1.9'
+    implementation 'com.shuhart.stepview:stepview:1.5.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
