--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,6 +131,7 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.3.3"
     implementation 'com.afollestad.assent:core:3.0.0-RC4'
     implementation 'com.shuhart.stepview:stepview:1.5.1'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
