getCities Api, room db

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,15 +16,13 @@ kotlin.code.style=official
 android.databinding.enableV2=true
 android.useAndroidX=true
 android.enableJetifier=true
-
-
 DATA_BASE_NAME="app_db"
 APP_PREF="sdei_architecture"
-BASE_URL="https://inventoryv2-dev.azurewebsites.net/api/"
+BASE_URL="http://54.190.192.105:6123/api/v1/"
 MEDIA_URL="https://reqres.in"
 app_name=Transport Mall FE
 version_code=1
 version_name=1.0
-application_id = com.transport.mall
+application_id=com.transport.mall
 
 
