--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ android {
 
 dependencies {
 
-    def room_version = '2.2.2'
+    def room_version = '2.3.0'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -72,9 +72,12 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
+
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    // To use Kotlin annotation processing tool (kapt)
+    kapt("androidx.room:room-compiler:$room_version")
+
     implementation 'com.google.firebase:firebase-core:17.2.0'
     // Live Data ...
     implementation "androidx.lifecycle:lifecycle-runtime:$project.liveData"
