--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,6 +136,8 @@ dependencies {
     implementation 'com.shuhart.stepview:stepview:1.5.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.deepakkumardk:EasyVideoPicker:1.0.1'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
