--- a/app/build.gradle
+++ b/app/build.gradle
@@ -133,7 +133,7 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.2.3"
     implementation "androidx.fragment:fragment-ktx:1.3.3"
     implementation 'com.afollestad.assent:core:3.0.0-RC4'
-    implementation 'com.shuhart.stepview:stepview:1.5.1'
+//    implementation 'com.shuhart.stepview:stepview:1.5.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.deepakkumardk:EasyVideoPicker:1.0.1'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
