Dhaba app -> Dhaba List -> Api integration | UI changes in Add Dhaba | Bank Details api integration

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ DATA_BASE_NAME="app_db"
 APP_PREF="sdei_architecture"
 BASE_URL="http://54.190.192.105:6123/api/v1/"
 MEDIA_URL="https://reqres.in"
-app_name=Transport Mall FE
+app_name=Transport Mall
 version_code=1
 version_name=1.0
 application_id=com.transport.mall
