--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,13 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-feature android:name="android.hardware.Camera"
+
+    <uses-feature
+        android:name="android.hardware.Camera"
         android:required="true" />
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:name="com.transport.mall.utils.base.BaseApplication"
@@ -29,6 +32,7 @@
 
         <activity
             android:name="com.transport.mall.ui.authentication.pre_login.splash.SplashActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/Transparenttheme">
 
             <intent-filter>
@@ -39,13 +43,20 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.transport.mall.ui.home.HomeActivity"></activity>
+        <activity
+            android:name="com.transport.mall.ui.home.HomeActivity"
+            android:screenOrientation="portrait"></activity>
 
         <activity
             android:name="com.transport.mall.ui.authentication.AuthenticationActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysVisible"></activity>
-        <activity android:name="com.transport.mall.ui.addnewdhaba.AddDhabaActivity"></activity>
-        <activity android:name="com.transport.mall.ui.addnewdhaba.step3.amenities.AmenitiesActivity"></activity>
+        <activity
+            android:name="com.transport.mall.ui.addnewdhaba.AddDhabaActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name="com.transport.mall.ui.addnewdhaba.step3.amenities.AmenitiesActivity"
+            android:screenOrientation="portrait"></activity>
 
         <provider
             android:name="androidx.core.content.FileProvider"
