--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,6 @@ project.ext {
     liveData = "2.2.0-alpha05"
 }
 
-
 android {
 
     compileSdkVersion 29
@@ -137,6 +136,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.deepakkumardk:EasyVideoPicker:1.0.1'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
