--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,18 +45,21 @@
 
         <activity
             android:name="com.transport.mall.ui.home.HomeActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
 
         <activity
             android:name="com.transport.mall.ui.authentication.AuthenticationActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateAlwaysVisible"></activity>
+            android:windowSoftInputMode="stateAlwaysVisible" />
         <activity
             android:name="com.transport.mall.ui.addnewdhaba.AddDhabaActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.transport.mall.ui.addnewdhaba.step3.amenities.AmenitiesActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.transport.mall.ui.addnewdhaba.GoogleMapsActivity"
+            android:screenOrientation="portrait" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -68,12 +71,15 @@
                 android:resource="@xml/provider_paths" />
         </provider>
 
-
         <!-- Define your service, make sure to add the permission! -->
         <service
             android:name="com.transport.mall.repository.networkcheck.NetworkSchedulerService"
             android:exported="true"
             android:permission="android.permission.BIND_JOB_SERVICE" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAYJCariN6djEQQDnt6hy482EeCV4sRVYQ" />
 
     </application>
 
