--- a/local.properties
+++ b/local.properties
@@ -6,5 +6,5 @@
 # header note.
 #Tue Sep 14 09:30:07 IST 2021
 ndk.dir=D\:\\RahulSharma\\AndroidSdk\\ndk-bundle
-sdk.dir=/Users/parambir.singh/Library/Android/sdk
+sdk.dir=E\:\\AndroidStudio\\DOWNLOADED_SDKS\\sdk
 
