--- a/local.properties
+++ b/local.properties
@@ -4,7 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Sep 14 09:30:07 IST 2021
+#Mon Sep 27 12:57:15 IST 2021
 ndk.dir=D\:\\RahulSharma\\AndroidSdk\\ndk-bundle
-sdk.dir=E\:\\AndroidStudio\\DOWNLOADED_SDKS\\sdk
-
+sdk.dir=/Users/parambir.singh/Library/Android/sdk
