--- a/app/build.gradle
+++ b/app/build.gradle
@@ -133,7 +133,7 @@ dependencies {
     implementation 'com.afollestad.assent:core:3.0.0-RC4'
 //    implementation 'com.shuhart.stepview:stepview:1.5.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'com.github.deepakkumardk:EasyVideoPicker:1.0.1'
+//    implementation 'com.github.deepakkumardk:EasyVideoPicker:1.0.1'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.github.joielechong:countrycodepicker:2.4.2'
@@ -142,7 +142,7 @@ dependencies {
     implementation 'com.github.AbedElazizShe:LightCompressor:0.9.9'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
-    implementation 'com.schibstedspain.android:leku:8.0.0'
+    implementation project(':simpleplacepicker')
 }
 
 apply plugin: 'com.google.gms.google-services'
