--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
         <activity
             android:name="com.transport.mall.ui.authentication.AuthenticationActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateAlwaysVisible" />
+            android:windowSoftInputMode="stateVisible" />
         <activity
             android:name="com.transport.mall.ui.addnewdhaba.AddDhabaActivity"
             android:screenOrientation="portrait" />
