--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,6 +143,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
     implementation project(':simpleplacepicker')
+    implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
