--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,6 @@ MEDIA_URL="https://reqres.in"
 app_name=Transport Mall Partner
 version_code=1
 version_name=1.1
-application_id=com.transport.mall
+application_id=com.transportmall.seller.dhaba.partnerapp
 
 
