--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,8 @@ android.useAndroidX=true
 android.enableJetifier=true
 DATA_BASE_NAME="app_db"
 APP_PREF="sdei_architecture"
-BASE_URL="http://54.190.192.105:6123/api/v1/"
+#BASE_URL="http://54.190.192.105:6123/api/v1/"
+BASE_URL="http://admin.transportmall.com/api/v1/"
 MEDIA_URL="https://reqres.in"
 app_name=Transport Mall Partner
 version_code=1
