SDK Version updated and release created

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,11 +19,9 @@ android.enableJetifier=true
 DATA_BASE_NAME="app_db"
 APP_PREF="sdei_architecture"
 #BASE_URL="http://54.190.192.105:6123/api/v1/"
-BASE_URL="http://admin.transportmall.com/api/v1/"
+BASE_URL="https://admin.transportmall.com/api/v1/"
 MEDIA_URL="https://reqres.in"
 app_name=Transport Mall Partner
 version_code=1
 version_name=1.1
 application_id=com.transportmall.seller.dhaba.partnerapp
-
-
