--- a/gradle.properties
+++ b/gradle.properties
@@ -16,12 +16,15 @@ kotlin.code.style=official
 android.databinding.enableV2=true
 android.useAndroidX=true
 android.enableJetifier=true
-DATA_BASE_NAME="app_db"
 APP_PREF="sdei_architecture"
-#BASE_URL="http://54.190.192.105:6123/api/v1/"
-BASE_URL="https://admin.transportmall.com/api/v1/"
-MEDIA_URL="https://reqres.in"
-app_name=Transport Mall Partner
 version_code=1
 version_name=1.1
+#Dev credentials
+app_name_dev=Dev Transport Mall Partner
+BASE_URL_DEV="http://54.190.192.105:6123/api/v1/"
+application_id_dev=com.transportmall.seller.dhaba.partnerapp
+
+#live crendentials
+app_name=Transport Mall Partner
+BASE_URL="https://admin.transportmall.com/api/v1/"
 application_id=com.transportmall.seller.dhaba.partnerapp
