--- a/gradle.properties
+++ b/gradle.properties
@@ -24,6 +24,11 @@ app_name_dev=Dev Transport Mall Partner
 BASE_URL_DEV="http://54.190.192.105:6123/api/v1/"
 application_id_dev=com.transportmall.seller.dhaba.partnerapp
 
+#UAT credentials
+app_name_uat=UAT Transport Mall Partner
+BASE_URL_UAT="https://admin_uat.transportmall.com/api/v1/"
+application_id_uat=com.transportmall.seller.dhaba.partnerapp
+
 #live crendentials
 app_name=Transport Mall Partner
 BASE_URL="https://admin.transportmall.com/api/v1/"
