--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def room_version = '2.3.0'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
