--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
 
         <activity
             android:name="com.transport.mall.ui.home.HomeActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"/>
 
         <activity
             android:name="com.transport.mall.ui.authentication.AuthenticationActivity"
@@ -52,7 +53,8 @@
             android:windowSoftInputMode="stateVisible" />
         <activity
             android:name="com.transport.mall.ui.addnewdhaba.AddDhabaActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name="com.transport.mall.ui.addnewdhaba.step3.amenities.AmenitiesActivity"
             android:screenOrientation="portrait" />
