--- a/app/build.gradle
+++ b/app/build.gradle
@@ -163,6 +163,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
     implementation project(':simpleplacepicker')
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.2'
+    implementation("io.github.g00fy2:versioncompare:1.4.1")
 }
 
 apply plugin: 'com.google.gms.google-services'
