--- a/app/build.gradle
+++ b/app/build.gradle
@@ -164,6 +164,8 @@ dependencies {
     implementation project(':simpleplacepicker')
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.2'
     implementation("io.github.g00fy2:versioncompare:1.4.1")
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.google.android.gms:play-services-auth-api-phone:17.5.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
