- UAT url updated - amenities management -> dynamically show amenities options as per admin settings

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,7 +26,7 @@ application_id_dev=com.transportmall.seller.dhaba.partnerapp
 
 #UAT credentials
 app_name_uat=UAT Transport Mall Partner
-BASE_URL_UAT="https://admin_uat.transportmall.com/api/v1/"
+BASE_URL_UAT="https://adminuat.transportmall.com/api/v1/"
 application_id_uat=com.transportmall.seller.dhaba.partnerapp
 
 #live crendentials
