Ui Fixes as per Wireframes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,9 @@
             android:name="com.transport.mall.ui.addnewdhaba.step3.amenities.AmenitiesActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".ui.home.CommonActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".utils.common.fullimageview.ImagePagerActivity"
             android:screenOrientation="portrait" />
 
