--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,8 @@
         <activity
             android:name="com.transport.mall.ui.viewdhaba.ViewDhabaActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden" />
+            android:windowSoftInputMode="stateHidden"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name="com.transport.mall.ui.addnewdhaba.step3.amenities.AmenitiesActivity"
             android:screenOrientation="portrait" />
