--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@drawable/ic_launcher"
+        android:roundIcon="@drawable/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
@@ -68,6 +68,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".utils.common.fullimageview.ImagePagerActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".utils.common.WebViewActivity"
             android:screenOrientation="portrait" />
 
         <provider
