--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,7 +110,8 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-scalars:$project.retrofit"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$project.retrofit"
     implementation "com.squareup.retrofit2:converter-gson:$project.retrofit"
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.3'
+//    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.3'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
 
     /* Dagger2 - We are going to use dagger.android which includes
      * support for Activity and fragment injection so we need to include
@@ -166,6 +167,20 @@ dependencies {
     implementation("io.github.g00fy2:versioncompare:1.4.1")
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.google.android.gms:play-services-auth-api-phone:17.5.1'
+
+    implementation 'com.github.rygelouv:android-audio-sensei:0.1.2'
+    implementation('io.socket:socket.io-client:0.8.3') {
+        exclude group: 'org.json', module: 'json'
+    }
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
+    /*Glide*/
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    kapt 'com.github.buCompressionListenermptech.glide:compiler:4.12.0'
+    implementation 'com.github.draxdave:netWatch:0.d.21'
+    implementation 'com.jsibbold:zoomage:1.3.1'
+    implementation 'com.sasank.roundedhorizontalprogress:roundedhorizontalprogress:1.0.1'
+    implementation 'com.github.3llomi:RecordView:3.0.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
