--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ project.ext {
 
 android {
 
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId "${application_id}"
@@ -176,11 +176,14 @@ dependencies {
     /*Glide*/
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-    kapt 'com.github.buCompressionListenermptech.glide:compiler:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
+
     implementation 'com.github.draxdave:netWatch:0.d.21'
     implementation 'com.jsibbold:zoomage:1.3.1'
     implementation 'com.sasank.roundedhorizontalprogress:roundedhorizontalprogress:1.0.1'
     implementation 'com.github.3llomi:RecordView:3.0.2'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+    implementation 'com.google.android.gms:play-services-analytics:17.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
