--- a/app/build.gradle
+++ b/app/build.gradle
@@ -183,7 +183,8 @@ dependencies {
     implementation 'com.sasank.roundedhorizontalprogress:roundedhorizontalprogress:1.0.1'
     implementation 'com.github.3llomi:RecordView:3.0.2'
     implementation 'com.jakewharton.timber:timber:5.0.1'
-    implementation 'com.google.android.gms:play-services-analytics:17.0.1'
+    implementation 'com.google.android.gms:play-services-analytics:18.0.1'
+    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
 }
 
 apply plugin: 'com.google.gms.google-services'
