--- a/local.properties
+++ b/local.properties
@@ -5,5 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Dec 27 14:59:32 IST 2021
-sdk.dir=/Users/parambir.singh/Library/Android/sdk
+sdk.dir=E\:\\AndroidStudio\\DOWNLOADED_SDKS\\sdk
 ndk.dir=D\:\\RahulSharma\\AndroidSdk\\ndk-bundle
